force-app/main/default/objects/copado__Selenium_Group_Variable__c/fields/copado__Display_Value__c.field-meta.xml
<CustomField>
    <fullName>copado__Display_Value__c</fullName>
    <formula>if( copado__Hide_Value__c, &quot;*****&quot;, copado__Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Value</label>
    <type>Text</type>
</CustomField>