force-app/main/default/objects/copado__Selenium_Group_Variable__c/fields/copado__Hide_Value__c.field-meta.xml
<CustomField>
    <fullName>copado__Hide_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this Checkbox to hide the value in the Test Group related list.</inlineHelpText>
    <label>Hide Value</label>
    <type>Checkbox</type>
</CustomField>