force-app/main/default/objects/copado__Selenium_Group_Variable__c/fields/copado__Selenium_Test_Group__c.field-meta.xml
<CustomField>
    <fullName>copado__Selenium_Test_Group__c</fullName>
    <label>Selenium Test Group</label>
    <referenceTo>copado__Selenium_Test_Group__c</referenceTo>
    <relationshipLabel>Selenium Group Variables</relationshipLabel>
    <relationshipName>Selenium_Group_Variables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>