force-app/main/default/objects/copado__Selenium_Group_Variable__c/fields/copado__Value__c.field-meta.xml
<CustomField>
    <fullName>copado__Value__c</fullName>
    <inlineHelpText>The Selenium Group Variable is valid only within this Selenium Group.  On Test Cases, a variable can be referred to as {!Group.VARIABLE_NAME}.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>